Add CSS variables

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -1,1 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:600&display=swap')
+// CSS Variables
+//Primary Colors
+$pink: hsl(322, 100%, 66%)
+
+//Neutral Colors
+$very-pale-cyan: hsl(193, 100%, 96%)
+$very-dark-cyan: hsl(192, 100%, 9%)
+$grayish-blue: hsl(208, 11%, 55%)
+
+//Heading Fonts
+$poppins: 'Poppins', sans-serif
+
+//Body, Call-to-action Fonts
+$open-sans: 'Open Sans', sans-serif
