Style top, middle containers and elements

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -13,3 +13,36 @@ $poppins: 'Poppins', sans-serif
 
 //Body, Call-to-action Fonts
 $open-sans: 'Open Sans', sans-serif
+
+//--------------------------------//
+h1
+  font-family: $poppins
+  font-weight: 600
+
+.body
+  font-size: 18px
+  font-family: $open-sans
+
+.top-container
+  background: $very-pale-cyan url("../images/bg-hero-desktop.svg") no-repeat fixed
+
+.top-left-column
+  h1
+    line-height: 1.5
+
+  p
+    font-size: 1rem
+    color: $very-dark-cyan
+
+.top-right-column
+  img
+    height: 25rem
+    width: auto
+
+.middle-page-col
+  -webkit-box-shadow: 0 0 14px 4px rgba(0,0,0,0.06)
+  -moz-box-shadow: 0 0 14px 4px rgba(0,0,0,0.06)
+  box-shadow: 0 0 14px 4px rgba(0,0,0,0.06)
+  padding: 3rem
+  margin: 2rem
+  border-radius: 0.8rem
