--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,38 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:600&display=swap");
+h1 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+}
+
 .body {
   font-size: 18px;
   font-family: "Open Sans", sans-serif;
+}
+
+.top-container {
+  background: #ebfbff url("../images/bg-hero-desktop.svg") no-repeat fixed;
+}
+
+.top-left-column h1 {
+  line-height: 1.5;
+}
+.top-left-column p {
+  font-size: 1rem;
+  color: #00252e;
+}
+
+.top-right-column img {
+  height: 25rem;
+  width: auto;
+}
+
+.middle-page-col {
+  -webkit-box-shadow: 0 0 14px 4px rgba(0, 0, 0, 0.06);
+  -moz-box-shadow: 0 0 14px 4px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 0 14px 4px rgba(0, 0, 0, 0.06);
+  padding: 3rem;
+  margin: 2rem;
+  border-radius: 0.8rem;
 }
 
 /*# sourceMappingURL=style.css.map */
