--- a/styles/style.sass
+++ b/styles/style.sass
@@ -17,6 +17,7 @@ $open-sans: 'Open Sans', sans-serif
 //--------------------------------//
 h1
   font-family: $poppins
+  font-size: 1.9rem
   font-weight: 600
 
 .body
@@ -40,7 +41,7 @@ h1
     width: auto
 
 .middle-container
-  margin-top: 8rem
+  margin: 8rem 2rem 17rem 0
 
 .middle-row
   -webkit-box-shadow: 0 0 10px 4px rgba(0,0,0,0.06)
@@ -79,3 +80,33 @@ h1
 .users-img
   text-align: right
   padding: 0
+
+.cta-row
+  -webkit-box-shadow: 0 0 10px 4px rgba(0,0,0,0.06)
+  -moz-box-shadow: 0 0 10px 4px rgba(0,0,0,0.06)
+  box-shadow: 0 0 10px 4px rgba(0,0,0,0.06)
+  border-radius: 0.8rem
+  //margin-top: 6rem
+  width: calc(100% - 35rem)
+  padding: 3rem 3rem
+  transform: translateX(-50%)
+  text-align: center
+  position: absolute
+  top: 114rem
+  left: 50%
+  z-index: 2
+  background-color: white
+
+  h1
+    padding-bottom: 1.7rem
+    font-size: 1.7rem
+
+  button
+    border-radius: 40px
+    padding: 1.1rem 6rem
+    font-weight: bold
+
+.bottom-container
+  padding-top: 10rem
+  background-color: $very-dark-cyan
+  color: white
