--- a/styles/style.sass
+++ b/styles/style.sass
@@ -107,6 +107,40 @@ h1
     font-weight: bold
 
 .bottom-container
-  padding-top: 10rem
+  padding: 8.5rem 7rem
   background-color: $very-dark-cyan
   color: white
+
+.info-section
+
+
+  div
+    display: flex
+    align-items: flex-start
+    margin: 0 0 1.5em 0
+
+  img
+    margin-top: .20rem
+    margin-right: 1rem
+
+  p
+    margin: 0
+    padding: 0
+    color: white
+    font-size: .85rem
+
+.bottom-logo
+  width: 20%
+  margin-bottom: 2rem
+
+.about-us
+  font-size: 0.95rem
+  margin-left: 5rem
+
+.career
+  font-size: 0.95rem
+  margin-left: 2rem
+
+
+.icons
+  text-align: left
