--- a/styles/style.sass
+++ b/styles/style.sass
@@ -141,6 +141,12 @@ h1
   font-size: 0.95rem
   margin-left: 2rem
 
-
 .icons
-  text-align: left
+  i
+    width: 2.3rem
+    height: 2.3rem
+    padding: 0.6rem
+    color: white
+    border: 1px solid grey
+    border-radius: 50%
+    text-align: center
