--- a/styles/style.css
+++ b/styles/style.css
@@ -135,8 +135,14 @@ h1 {
   margin-left: 2rem;
 }
 
-.icons {
-  text-align: left;
+.icons i {
+  width: 2.3rem;
+  height: 2.3rem;
+  padding: 0.6rem;
+  color: white;
+  border: 1px solid grey;
+  border-radius: 50%;
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
