--- a/styles/style.sass
+++ b/styles/style.sass
@@ -109,11 +109,9 @@ h1
 .bottom-container
   padding: 8.5rem 7rem
   background-color: $very-dark-cyan
-  color: white
+  color: $very-pale-cyan
 
 .info-section
-
-
   div
     display: flex
     align-items: flex-start
@@ -126,7 +124,6 @@ h1
   p
     margin: 0
     padding: 0
-    color: white
     font-size: .85rem
 
 .bottom-logo
