Format and style footer section and attribution

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -107,7 +107,7 @@ h1
     font-weight: bold
 
 .bottom-container
-  padding: 8.5rem 7rem
+  padding: 8.5rem 7rem 1rem 7rem
   background-color: $very-dark-cyan
   color: $very-pale-cyan
 
@@ -147,3 +147,16 @@ h1
     border: 1px solid grey
     border-radius: 50%
     text-align: center
+
+.copyright
+  padding-top: 0.5rem
+  color: $grayish-blue
+  font-size: 0.7rem
+  font-weight: bold
+  text-align: right
+
+.attribution
+  color: $grayish-blue
+  padding-top: 1.5rem
+  font-size: 0.9rem
+  text-align: center
