--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,7 @@ h1 {
 }
 
 .bottom-container {
-  padding: 8.5rem 7rem;
+  padding: 8.5rem 7rem 1rem 7rem;
   background-color: #00252e;
   color: #ebfbff;
 }
@@ -141,6 +141,21 @@ h1 {
   color: white;
   border: 1px solid grey;
   border-radius: 50%;
+  text-align: center;
+}
+
+.copyright {
+  padding-top: 0.5rem;
+  color: #808d99;
+  font-size: 0.7rem;
+  font-weight: bold;
+  text-align: right;
+}
+
+.attribution {
+  color: #808d99;
+  padding-top: 1.5rem;
+  font-size: 0.9rem;
   text-align: center;
 }
 
