--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@
 h1 {
   font-family: "Poppins", sans-serif;
   font-size: 1.9rem;
-  font-weight: 600;
 }
 
 .body {
@@ -11,15 +10,56 @@ h1 {
 }
 
 .top-container {
-  background: #ebfbff url("../images/bg-hero-desktop.svg") no-repeat fixed;
+  background: #ebfbff url("../images/bg-hero-desktop.svg") no-repeat;
+  padding: 3rem 4rem;
 }
 
+.top-logo {
+  padding-bottom: 4rem;
+}
+.top-logo img {
+  width: 30%;
+}
+
+.try-it-free {
+  text-align: right;
+}
+.try-it-free button {
+  -webkit-box-shadow: 6px 6px 10px -8px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 6px 6px 10px -8px rgba(0, 0, 0, 0.25);
+  box-shadow: 6px 6px 10px -8px rgba(0, 0, 0, 0.25);
+  padding: 0.5rem 3rem;
+  border-radius: 40px;
+  color: #00252e;
+  background-color: white;
+  border-color: white;
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+
+.top-left-column {
+  padding: 4.5rem 2.3rem;
+}
 .top-left-column h1 {
   line-height: 1.5;
+  padding-bottom: 1.2rem;
 }
 .top-left-column p {
   font-size: 1rem;
   color: #00252e;
+}
+.top-left-column button {
+  background-color: #ff52bf;
+  border-color: #ff52bf;
+  border-radius: 40px;
+  padding: 0.8rem 3.2rem;
+  font-weight: bold;
+  font-size: 0.8em;
+  color: #ebfbff;
+}
+.top-left-column button:hover {
+  border-color: #ff52bf;
+  background-color: #ff18b3;
 }
 
 .top-right-column img {
@@ -83,7 +123,7 @@ h1 {
   transform: translateX(-50%);
   text-align: center;
   position: absolute;
-  top: 114rem;
+  top: 125rem;
   left: 50%;
   z-index: 2;
   background-color: white;
@@ -93,9 +133,18 @@ h1 {
   font-size: 1.7rem;
 }
 .cta-row button {
+  -webkit-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.18);
+  -moz-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.18);
+  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.18);
+  background-color: #ff52bf;
+  border-color: #ff52bf;
   border-radius: 40px;
   padding: 1.1rem 6rem;
   font-weight: bold;
+}
+.cta-row button:hover {
+  border-color: #ff52bf;
+  background-color: #ff18b3;
 }
 
 .bottom-container {
