--- a/styles/style.sass
+++ b/styles/style.sass
@@ -194,6 +194,10 @@ h1
     border-radius: 50%
     text-align: center
 
+  i:hover
+    color: #ff52bf
+    border-color: #ff52bf
+
 .copyright
   padding-top: 0.5rem
   color: $grayish-blue
