--- a/styles/style.sass
+++ b/styles/style.sass
@@ -79,7 +79,8 @@ h1
     width: auto
 
 .middle-container
-  margin: 8rem 2rem 17rem 0
+  margin-top: 8rem
+  margin-bottom: 17rem
 
 .middle-row
   -webkit-box-shadow: 0 0 10px 4px rgba(0,0,0,0.06)
