--- a/styles/style.sass
+++ b/styles/style.sass
@@ -19,7 +19,6 @@ h1
   font-family: $poppins
   font-size: 1.9rem
 
-
 .body
   font-size: 18px
   font-family: $open-sans
@@ -211,3 +210,10 @@ h1
   padding-top: 1.5rem
   font-size: 0.9rem
   text-align: center
+
+@media screen and (min-width: 1440px)
+  .container-fluid
+    width: 50%
+
+  .cta-row
+    width: 30%
