--- a/styles/style.css
+++ b/styles/style.css
@@ -18,13 +18,12 @@ h1 {
   padding-bottom: 4rem;
 }
 .top-logo img {
-  width: 30%;
+  width: 20%;
 }
-
-.try-it-free {
-  text-align: right;
+.top-logo button {
+  margin-left: 43rem;
 }
-.try-it-free button {
+.top-logo button {
   -webkit-box-shadow: 6px 6px 10px -8px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 6px 6px 10px -8px rgba(0, 0, 0, 0.25);
   box-shadow: 6px 6px 10px -8px rgba(0, 0, 0, 0.25);
@@ -220,6 +219,155 @@ h1 {
 
   .cta-row {
     width: 30%;
+  }
+}
+@media screen and (max-width: 992px) {
+  .top-container {
+    background: #ebfbff url("../images/bg-hero-mobile.svg") no-repeat;
+    margin: 0 auto;
+  }
+
+  .top-logo {
+    padding: 0;
+  }
+  .top-logo img {
+    width: 30%;
+  }
+  .top-logo button {
+    margin-left: 9rem;
+    padding: 0.5rem 1.5rem;
+  }
+
+  .top-left-column {
+    text-align: center;
+  }
+  .top-left-column h1 {
+    font-size: 1.8rem;
+  }
+  .top-left-column button {
+    margin-left: 2rem;
+  }
+
+  .top-right-column img {
+    display: block;
+    margin: 0 auto;
+    max-width: 70vw;
+    max-height: 35vh;
+  }
+
+  .middle-container {
+    margin-top: 0;
+    margin-bottom: 15rem;
+    text-align: center;
+  }
+
+  .middle-row {
+    padding: 1rem 1rem 1rem 1rem;
+    margin: 2.5rem;
+    border-radius: 0.8rem;
+  }
+  .middle-row h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #00252e;
+  }
+  .middle-row p {
+    font-size: 0.9rem;
+    color: #808d99;
+  }
+  .middle-row img {
+    height: 16rem;
+    width: auto;
+  }
+
+  .middle-txt-col {
+    padding: 2rem;
+  }
+
+  .grow-img {
+    text-align: center;
+    padding: 0;
+  }
+
+  .flowing-img {
+    text-align: left;
+    padding: 0;
+  }
+
+  .users-img {
+    text-align: center;
+    padding: 0;
+  }
+
+  .cta-row {
+    -webkit-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.06);
+    -moz-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.06);
+    box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.06);
+    border-radius: 0.8rem;
+    width: 90%;
+    padding: 3rem 3rem;
+    text-align: center;
+    position: absolute;
+    top: 157rem;
+    left: 52.5%;
+    z-index: 2;
+    background-color: white;
+  }
+  .cta-row h1 {
+    padding-bottom: 1.7rem;
+    font-size: 1.4rem;
+  }
+  .cta-row button {
+    padding: 1.1rem 3rem;
+  }
+
+  .bottom-container {
+    padding: 8.5rem 2.5rem 1rem 2.5rem;
+  }
+
+  .info-section div {
+    display: flex;
+    align-items: flex-start;
+    margin: 0 0 1.5em 0;
+  }
+  .info-section img {
+    margin-top: 0.2rem;
+    margin-right: 1rem;
+  }
+  .info-section p {
+    margin: 0;
+    padding: 0;
+    font-size: 0.95rem;
+  }
+
+  .bottom-logo {
+    width: 40%;
+    margin-bottom: 2rem;
+  }
+
+  .about-us {
+    margin-left: 0;
+  }
+
+  .career {
+    margin-left: 0;
+  }
+
+  .icons {
+    padding-top: 2rem;
+    margin: 0 11rem;
+  }
+
+  .copyright {
+    padding-top: 2rem;
+    text-align: center;
+  }
+
+  .attribution {
+    color: #808d99;
+    padding-top: 1.5rem;
+    font-size: 0.9rem;
+    text-align: center;
   }
 }
 
