--- a/styles/style.sass
+++ b/styles/style.sass
@@ -31,10 +31,10 @@ h1
   padding-bottom: 4rem
 
   img
-    width: 30%
+    width: 20%
 
-.try-it-free
-  text-align: right
+  button
+    margin-left: 43rem
 
   button
     -webkit-box-shadow: 6px 6px 10px -8px rgba(0,0,0,0.25)
@@ -217,3 +217,139 @@ h1
 
   .cta-row
     width: 30%
+
+@media screen and (max-width: 992px)
+  .top-container
+    background: $very-pale-cyan url("../images/bg-hero-mobile.svg") no-repeat
+    margin: 0 auto
+
+  .top-logo
+    padding: 0
+
+    img
+      width: 30%
+
+    button
+      margin-left: 9rem
+      padding: 0.5rem 1.5rem
+
+  .top-left-column
+    text-align: center
+
+    h1
+      font-size: 1.8rem
+
+    button
+      margin-left: 2rem
+
+  .top-right-column
+    img
+      display: block
+      margin: 0 auto
+      max-width: 70vw
+      max-height: 35vh
+
+
+  .middle-container
+    margin-top: 0
+    margin-bottom: 15rem
+    text-align: center
+
+
+  .middle-row
+    padding: 1rem 1rem 1rem 1rem
+    margin: 2.5rem
+    border-radius: 0.8rem
+
+    h2
+      font-size: 1.5rem
+      font-weight: 700
+      color: $very-dark-cyan
+
+    p
+      font-size: 0.9rem
+      color: $grayish-blue
+
+
+    img
+      height: 16rem
+      width: auto
+
+  .middle-txt-col
+    padding: 2rem
+
+  .grow-img
+    text-align: center
+    padding: 0
+
+  .flowing-img
+    text-align: left
+    padding: 0
+
+
+  .users-img
+    text-align: center
+    padding: 0
+
+  .cta-row
+    -webkit-box-shadow: 0 0 10px 4px rgba(0,0,0,0.06)
+    -moz-box-shadow: 0 0 10px 4px rgba(0,0,0,0.06)
+    box-shadow: 0 0 10px 4px rgba(0,0,0,0.06)
+    border-radius: 0.8rem
+    width: 90%
+    padding: 3rem 3rem
+    text-align: center
+    position: absolute
+    top: 157rem
+    left: 52.5%
+    z-index: 2
+    background-color: white
+
+    h1
+      padding-bottom: 1.7rem
+      font-size: 1.4rem
+
+    button
+      padding: 1.1rem 3rem
+
+  .bottom-container
+    padding: 8.5rem 2.5rem 1rem 2.5rem
+
+  .info-section
+    div
+      display: flex
+      align-items: flex-start
+      margin: 0 0 1.5em 0
+
+    img
+      margin-top: .20rem
+      margin-right: 1rem
+
+    p
+      margin: 0
+      padding: 0
+      font-size: .95rem
+
+  .bottom-logo
+    width: 40%
+    margin-bottom: 2rem
+
+  .about-us
+    margin-left: 0
+
+  .career
+    margin-left: 0
+
+  .icons
+    padding-top: 2rem
+    margin: 0 11rem
+
+  .copyright
+    padding-top: 2rem
+    text-align: center
+
+  .attribution
+    color: $grayish-blue
+    padding-top: 1.5rem
+    font-size: 0.9rem
+    text-align: center
