Fix container, divs and social icons layout in mobile size

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -221,7 +221,8 @@ h1
 @media screen and (max-width: 992px)
   .top-container
     background: $very-pale-cyan url("../images/bg-hero-mobile.svg") no-repeat
-    margin: 0 auto
+    margin: 0
+    padding: 3rem 0
 
   .top-logo
     padding: 0
@@ -247,7 +248,7 @@ h1
       display: block
       margin: 0 auto
       max-width: 70vw
-      max-height: 35vh
+      max-height: 30vh
 
 
   .middle-container
@@ -281,15 +282,29 @@ h1
   .grow-img
     text-align: center
     padding: 0
+    margin: 0
+
+    img
+      max-width: 50vw
+      max-height: 25vh
 
   .flowing-img
-    text-align: left
+    text-align: center
     padding: 0
+    margin: 0
 
+    img
+      max-width: 50vw
+      max-height: 25vh
 
   .users-img
     text-align: center
     padding: 0
+    margin: 0
+
+    img
+      max-width: 50vw
+      max-height: 25vh
 
   .cta-row
     -webkit-box-shadow: 0 0 10px 4px rgba(0,0,0,0.06)
@@ -300,7 +315,7 @@ h1
     padding: 3rem 3rem
     text-align: center
     position: absolute
-    top: 157rem
+    top: 280%
     left: 52.5%
     z-index: 2
     background-color: white
@@ -314,6 +329,7 @@ h1
 
   .bottom-container
     padding: 8.5rem 2.5rem 1rem 2.5rem
+    margin: 0
 
   .info-section
     div
@@ -342,7 +358,7 @@ h1
 
   .icons
     padding-top: 2rem
-    margin: 0 11rem
+    margin-left: 35%
 
   .copyright
     padding-top: 2rem
