--- a/styles/style.css
+++ b/styles/style.css
@@ -224,7 +224,8 @@ h1 {
 @media screen and (max-width: 992px) {
   .top-container {
     background: #ebfbff url("../images/bg-hero-mobile.svg") no-repeat;
-    margin: 0 auto;
+    margin: 0;
+    padding: 3rem 0;
   }
 
   .top-logo {
@@ -252,7 +253,7 @@ h1 {
     display: block;
     margin: 0 auto;
     max-width: 70vw;
-    max-height: 35vh;
+    max-height: 30vh;
   }
 
   .middle-container {
@@ -287,16 +288,31 @@ h1 {
   .grow-img {
     text-align: center;
     padding: 0;
+    margin: 0;
+  }
+  .grow-img img {
+    max-width: 50vw;
+    max-height: 25vh;
   }
 
   .flowing-img {
-    text-align: left;
+    text-align: center;
     padding: 0;
+    margin: 0;
+  }
+  .flowing-img img {
+    max-width: 50vw;
+    max-height: 25vh;
   }
 
   .users-img {
     text-align: center;
     padding: 0;
+    margin: 0;
+  }
+  .users-img img {
+    max-width: 50vw;
+    max-height: 25vh;
   }
 
   .cta-row {
@@ -308,7 +324,7 @@ h1 {
     padding: 3rem 3rem;
     text-align: center;
     position: absolute;
-    top: 157rem;
+    top: 280%;
     left: 52.5%;
     z-index: 2;
     background-color: white;
@@ -323,6 +339,7 @@ h1 {
 
   .bottom-container {
     padding: 8.5rem 2.5rem 1rem 2.5rem;
+    margin: 0;
   }
 
   .info-section div {
@@ -355,7 +372,7 @@ h1 {
 
   .icons {
     padding-top: 2rem;
-    margin: 0 11rem;
+    margin-left: 35%;
   }
 
   .copyright {
