--- a/styles/style.css
+++ b/styles/style.css
@@ -226,10 +226,12 @@ h1 {
     background: #ebfbff url("../images/bg-hero-mobile.svg") no-repeat;
     margin: 0;
     padding: 3rem 0;
+    box-sizing: unset;
   }
 
   .top-logo {
     padding: 0;
+    margin-left: 2rem;
   }
   .top-logo img {
     width: 30%;
@@ -260,6 +262,7 @@ h1 {
     margin-top: 0;
     margin-bottom: 15rem;
     text-align: center;
+    box-sizing: unset;
   }
 
   .middle-row {
@@ -340,6 +343,7 @@ h1 {
   .bottom-container {
     padding: 8.5rem 2.5rem 1rem 2.5rem;
     margin: 0;
+    box-sizing: unset;
   }
 
   .info-section div {
