--- a/styles/style.sass
+++ b/styles/style.sass
@@ -223,9 +223,11 @@ h1
     background: $very-pale-cyan url("../images/bg-hero-mobile.svg") no-repeat
     margin: 0
     padding: 3rem 0
+    box-sizing: unset
 
   .top-logo
     padding: 0
+    margin-left: 2rem
 
     img
       width: 30%
@@ -255,6 +257,7 @@ h1
     margin-top: 0
     margin-bottom: 15rem
     text-align: center
+    box-sizing: unset
 
 
   .middle-row
@@ -330,6 +333,7 @@ h1
   .bottom-container
     padding: 8.5rem 2.5rem 1rem 2.5rem
     margin: 0
+    box-sizing: unset
 
   .info-section
     div
