Format layout for mobile

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -26,6 +26,9 @@ h1
 .top-container
   background: $very-pale-cyan url("../images/bg-hero-desktop.svg") no-repeat
   padding: 3rem 4rem
+  margin: 0 auto
+  max-width: 100%
+  height: auto
 
 .top-logo
   padding-bottom: 4rem
@@ -221,8 +224,10 @@ h1
 @media screen and (max-width: 992px)
   .top-container
     background: $very-pale-cyan url("../images/bg-hero-mobile.svg") no-repeat
-    margin: 0
     padding: 3rem 0
+    margin: 0 auto
+    max-width: 100%
+    height: auto
 
   .top-logo
     padding: 0
@@ -236,6 +241,9 @@ h1
 
   .top-left-column
     text-align: center
+    margin: 0 auto
+    max-width: 100%
+    height: auto
 
     h1
       font-size: 1.8rem
@@ -244,6 +252,9 @@ h1
       margin-left: 2rem
 
   .top-right-column
+    margin: 0 auto
+    max-width: 100%
+    height: auto
     img
       display: block
       margin: 0 auto
