--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,9 @@ h1 {
 .top-container {
   background: #ebfbff url("../images/bg-hero-desktop.svg") no-repeat;
   padding: 3rem 4rem;
+  margin: 0 auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .top-logo {
@@ -224,8 +227,10 @@ h1 {
 @media screen and (max-width: 992px) {
   .top-container {
     background: #ebfbff url("../images/bg-hero-mobile.svg") no-repeat;
-    margin: 0;
     padding: 3rem 0;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
   }
 
   .top-logo {
@@ -241,6 +246,9 @@ h1 {
 
   .top-left-column {
     text-align: center;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
   }
   .top-left-column h1 {
     font-size: 1.8rem;
@@ -249,6 +257,11 @@ h1 {
     margin-left: 2rem;
   }
 
+  .top-right-column {
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+  }
   .top-right-column img {
     display: block;
     margin: 0 auto;
