--- a/styles/style.css
+++ b/styles/style.css
@@ -20,15 +20,17 @@ h1 {
 .top-logo {
   padding-bottom: 4rem;
 }
+
 .top-logo img {
   width: 20%;
 }
+
 .top-logo button {
   margin-left: 43rem;
 }
+
 .top-logo button {
   -webkit-box-shadow: 6px 6px 10px -8px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 6px 6px 10px -8px rgba(0, 0, 0, 0.25);
   box-shadow: 6px 6px 10px -8px rgba(0, 0, 0, 0.25);
   padding: 0.5rem 3rem;
   border-radius: 40px;
@@ -42,14 +44,17 @@ h1 {
 .top-left-column {
   padding: 4.5rem 2.3rem;
 }
+
 .top-left-column h1 {
   line-height: 1.5;
   padding-bottom: 1.2rem;
 }
+
 .top-left-column p {
   font-size: 1rem;
   color: #00252e;
 }
+
 .top-left-column button {
   background-color: #ff52bf;
   border-color: #ff52bf;
@@ -59,6 +64,7 @@ h1 {
   font-size: 0.8em;
   color: #ebfbff;
 }
+
 .top-left-column button:hover {
   border-color: #ff52bf;
   background-color: #ff18b3;
@@ -76,21 +82,23 @@ h1 {
 
 .middle-row {
   -webkit-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.06);
-  -moz-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.06);
   box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.06);
   padding: 3rem 1rem 3rem 3rem;
   margin: 2.5rem;
   border-radius: 0.8rem;
 }
+
 .middle-row h2 {
   font-size: 1.5rem;
   font-weight: 700;
   color: #00252e;
 }
+
 .middle-row p {
   font-size: 0.9rem;
   color: #808d99;
 }
+
 .middle-row img {
   height: 16rem;
   width: auto;
@@ -118,12 +126,12 @@ h1 {
 
 .cta-row {
   -webkit-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.06);
-  -moz-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.06);
   box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.06);
   border-radius: 0.8rem;
   width: calc(100% - 35rem);
   padding: 3rem 3rem;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   text-align: center;
   position: absolute;
   top: 125rem;
@@ -131,13 +139,14 @@ h1 {
   z-index: 2;
   background-color: white;
 }
+
 .cta-row h1 {
   padding-bottom: 1.7rem;
   font-size: 1.7rem;
 }
+
 .cta-row button {
   -webkit-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.18);
-  -moz-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.18);
   box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.18);
   background-color: #ff52bf;
   border-color: #ff52bf;
@@ -145,6 +154,7 @@ h1 {
   padding: 1.1rem 5rem;
   font-weight: bold;
 }
+
 .cta-row button:hover {
   border-color: #ff52bf;
   background-color: #ff18b3;
@@ -157,18 +167,24 @@ h1 {
 }
 
 .info-section div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   margin: 0 0 1.5em 0;
 }
+
 .info-section img {
-  margin-top: 0.2rem;
+  margin-top: .20rem;
   margin-right: 1rem;
 }
+
 .info-section p {
   margin: 0;
   padding: 0;
-  font-size: 0.85rem;
+  font-size: .85rem;
 }
 
 .bottom-logo {
@@ -195,6 +211,7 @@ h1 {
   border-radius: 50%;
   text-align: center;
 }
+
 .icons i:hover {
   color: #ff52bf;
   border-color: #ff52bf;
@@ -219,12 +236,12 @@ h1 {
   .container-fluid {
     width: 50%;
   }
-
   .cta-row {
     width: 30%;
   }
 }
-@media screen and (max-width: 992px) {
+
+@media screen and (max-width: 720px) {
   .top-container {
     background: #ebfbff url("../images/bg-hero-mobile.svg") no-repeat;
     padding: 3rem 0;
@@ -232,7 +249,6 @@ h1 {
     max-width: 100%;
     height: auto;
   }
-
   .top-logo {
     padding: 0;
   }
@@ -243,7 +259,6 @@ h1 {
     margin-left: 9rem;
     padding: 0.5rem 1.5rem;
   }
-
   .top-left-column {
     text-align: center;
     margin: 0 auto;
@@ -253,10 +268,6 @@ h1 {
   .top-left-column h1 {
     font-size: 1.8rem;
   }
-  .top-left-column button {
-    margin-left: 2rem;
-  }
-
   .top-right-column {
     margin: 0 auto;
     max-width: 100%;
@@ -268,77 +279,71 @@ h1 {
     max-width: 70vw;
     max-height: 30vh;
   }
-
   .middle-container {
     margin-top: 0;
     margin-bottom: 15rem;
     text-align: center;
   }
-
   .middle-row {
     padding: 1rem 1rem 1rem 1rem;
     margin: 2.5rem;
     border-radius: 0.8rem;
   }
   .middle-row h2 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 700;
     color: #00252e;
+    padding-bottom: 1.2rem;
   }
   .middle-row p {
     font-size: 0.9rem;
     color: #808d99;
+    line-height: 1.5;
   }
   .middle-row img {
     height: 16rem;
     width: auto;
   }
-
   .middle-txt-col {
     padding: 2rem;
   }
-
   .grow-img {
     text-align: center;
     padding: 0;
     margin: 0;
   }
   .grow-img img {
-    max-width: 50vw;
-    max-height: 25vh;
+    max-width: 60vw;
+    max-height: 20vh;
   }
-
   .flowing-img {
     text-align: center;
     padding: 0;
     margin: 0;
   }
   .flowing-img img {
-    max-width: 50vw;
-    max-height: 25vh;
+    max-width: 60vw;
+    max-height: 20vh;
   }
-
   .users-img {
     text-align: center;
     padding: 0;
     margin: 0;
   }
   .users-img img {
-    max-width: 50vw;
-    max-height: 25vh;
+    max-width: 60vw;
+    max-height: 20vh;
   }
-
   .cta-row {
     -webkit-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.06);
-    -moz-box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.06);
     box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.06);
     border-radius: 0.8rem;
     width: 90%;
     padding: 3rem 3rem;
     text-align: center;
     position: absolute;
-    top: 280%;
-    left: 52.5%;
+    top: 303%;
+    left: 54%;
     z-index: 2;
     background-color: white;
   }
@@ -349,50 +354,46 @@ h1 {
   .cta-row button {
     padding: 1.1rem 3rem;
   }
-
   .bottom-container {
     padding: 8.5rem 2.5rem 1rem 2.5rem;
     margin: 0;
   }
-
   .info-section div {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     margin: 0 0 1.5em 0;
   }
   .info-section img {
-    margin-top: 0.2rem;
+    margin-top: .20rem;
     margin-right: 1rem;
   }
   .info-section p {
     margin: 0;
     padding: 0;
-    font-size: 0.95rem;
+    font-size: .95rem;
   }
-
   .bottom-logo {
     width: 40%;
     margin-bottom: 2rem;
   }
-
   .about-us {
     margin-left: 0;
   }
-
   .career {
     margin-left: 0;
   }
-
   .icons {
     padding-top: 2rem;
-    margin-left: 35%;
+    left: 27%;
   }
-
   .copyright {
     padding-top: 2rem;
     text-align: center;
   }
-
   .attribution {
     color: #808d99;
     padding-top: 1.5rem;
@@ -400,5 +401,4 @@ h1 {
     text-align: center;
   }
 }
-
 /*# sourceMappingURL=style.css.map */
