--- a/styles/style.sass
+++ b/styles/style.sass
@@ -221,7 +221,7 @@ h1
   .cta-row
     width: 30%
 
-@media screen and (max-width: 992px)
+@media screen and (max-width: 720px)
   .top-container
     background: $very-pale-cyan url("../images/bg-hero-mobile.svg") no-repeat
     padding: 3rem 0
@@ -248,9 +248,6 @@ h1
     h1
       font-size: 1.8rem
 
-    button
-      margin-left: 2rem
-
   .top-right-column
     margin: 0 auto
     max-width: 100%
@@ -274,13 +271,15 @@ h1
     border-radius: 0.8rem
 
     h2
-      font-size: 1.5rem
+      font-size: 1.3rem
       font-weight: 700
       color: $very-dark-cyan
+      padding-bottom: 1.2rem
 
     p
       font-size: 0.9rem
       color: $grayish-blue
+      line-height: 1.5
 
 
     img
@@ -296,8 +295,8 @@ h1
     margin: 0
 
     img
-      max-width: 50vw
-      max-height: 25vh
+      max-width: 60vw
+      max-height: 20vh
 
   .flowing-img
     text-align: center
@@ -305,8 +304,8 @@ h1
     margin: 0
 
     img
-      max-width: 50vw
-      max-height: 25vh
+      max-width: 60vw
+      max-height: 20vh
 
   .users-img
     text-align: center
@@ -314,8 +313,8 @@ h1
     margin: 0
 
     img
-      max-width: 50vw
-      max-height: 25vh
+      max-width: 60vw
+      max-height: 20vh
 
   .cta-row
     -webkit-box-shadow: 0 0 10px 4px rgba(0,0,0,0.06)
@@ -326,8 +325,8 @@ h1
     padding: 3rem 3rem
     text-align: center
     position: absolute
-    top: 280%
-    left: 52.5%
+    top: 303%
+    left: 54%
     z-index: 2
     background-color: white
 
@@ -369,7 +368,7 @@ h1
 
   .icons
     padding-top: 2rem
-    margin-left: 35%
+    left: 27%
 
   .copyright
     padding-top: 2rem
