--- a/styles/style.sass
+++ b/styles/style.sass
@@ -325,7 +325,7 @@ h1
     padding: 3rem 3rem
     text-align: center
     position: absolute
-    top: 303%
+    top: 153rem
     left: 54%
     z-index: 2
     background-color: white
